fixed overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,7 @@ h6 {
     inset: 0;
     background: #fff;
     padding: 4rem;
+    overflow-y: scroll;
 }
 
 .col-right {
